--- a/public/assets/scss/layout/_nav.scss
+++ b/public/assets/scss/layout/_nav.scss
@@ -61,9 +61,9 @@ header {
       position: relative;
 
       .dropdown-menu {
-        >li {
+        > li {
           &:first-child {
-            >a {
+            > a {
               margin-top: 0 !important;
             }
           }
@@ -86,7 +86,7 @@ header {
             cursor: pointer;
 
             &:after {
-              content: '\ea6e';
+              content: "\ea6e";
               font-size: 16px;
               right: 0;
             }
@@ -183,7 +183,8 @@ header {
       margin: 0;
       margin-top: -8px;
       background-color: $white;
-      box-shadow: -1px 0 10px 0 rgba($title-color, 0.7), 5px 20px 40px 0 rgba($title-color, 0.4);
+      box-shadow: -1px 0 10px 0 rgba($title-color, 0.7),
+        5px 20px 40px 0 rgba($title-color, 0.4);
       border-color: transparent;
       box-shadow: none;
       border: 0;
@@ -205,7 +206,7 @@ header {
       .sub-dropdown-hover {
         position: relative;
 
-        >a {
+        > a {
           display: block;
           position: relative;
 
@@ -218,7 +219,7 @@ header {
           }
 
           &::before {
-            @include pos($pos: absolute, $content: '\ea6e');
+            @include pos($pos: absolute, $content: "\ea6e");
             @include remixicon;
             @include center(vertical);
             right: 0;
@@ -243,7 +244,8 @@ header {
           top: -19px;
           left: 123%;
           min-width: 200px;
-          box-shadow: -1px 0 10px 0 rgba($title-color, 0.07), 5px 20px 40px 0 rgba($title-color, 0.04);
+          box-shadow: -1px 0 10px 0 rgba($title-color, 0.07),
+            5px 20px 40px 0 rgba($title-color, 0.04);
           background-color: $white;
           border-color: transparent;
           padding: 20px;
@@ -435,7 +437,9 @@ header {
             display: inline-block;
             margin-top: 10px;
             text-align: center;
-            font-size: calc(15px + (16 - 15) * ((100vw - 1200px) / (1920 - 1200)));
+            font-size: calc(
+              15px + (16 - 15) * ((100vw - 1200px) / (1920 - 1200))
+            );
             margin-bottom: -6px;
             position: relative;
             z-index: 0;
@@ -489,18 +493,22 @@ header {
   .navbar.navbar-expand-xl {
     .navbar-nav {
       .nav-item {
-        +.nav-item {
-          margin-left: calc(15px + (25 - 15) * ((100vw - 1200px) / (1920 - 1200)));
+        + .nav-item {
+          margin-left: calc(
+            15px + (25 - 15) * ((100vw - 1200px) / (1920 - 1200))
+          );
 
-          body[dir='rtl'] & {
+          body[dir="rtl"] & {
             margin-left: unset;
-            margin-right: calc(15px + (25 - 15) * ((100vw - 1200px) / (1920 - 1200)));
+            margin-right: calc(
+              15px + (25 - 15) * ((100vw - 1200px) / (1920 - 1200))
+            );
           }
 
           @include mq-max(xl) {
             margin-left: 0;
 
-            body[dir='rtl'] & {
+            body[dir="rtl"] & {
               margin-left: unset;
               margin-right: 0;
             }
@@ -510,23 +518,23 @@ header {
 
       .nav-item {
         &.dropdown {
-          >a {
+          > a {
             padding-right: 18px;
 
-            body[dir='rtl'] & {
+            body[dir="rtl"] & {
               padding-right: unset;
               padding-left: 18px;
             }
 
             &::before {
-              @include pos($pos: absolute, $content: "\ea4e");
+              @include pos($pos: absolute);
               @include remixicon;
               @include center(vertical);
               right: -4px;
               font-size: 16px;
               transition: all 0.6s ease;
 
-              body[dir='rtl'] & {
+              body[dir="rtl"] & {
                 right: unset;
                 left: -4px;
               }
@@ -535,7 +543,7 @@ header {
                 right: 0;
                 line-height: 1;
 
-                body[dir='rtl'] & {
+                body[dir="rtl"] & {
                   right: unset;
                   left: 0;
                 }
@@ -543,9 +551,9 @@ header {
             }
           }
 
-          >.dropdown-menu {
-            >.dropdown-mega {
-              >.dropdown-item {
+          > .dropdown-menu {
+            > .dropdown-mega {
+              > .dropdown-item {
                 position: relative;
 
                 &::before {
@@ -556,7 +564,7 @@ header {
                   font-size: 16px;
                   transition: all 0.6s ease;
 
-                  body[dir='rtl'] & {
+                  body[dir="rtl"] & {
                     right: unset;
                     left: 0;
                     transform: rotateY(180deg);
@@ -566,7 +574,7 @@ header {
                   @include mq-max(xl) {
                     right: 25px;
 
-                    body[dir='rtl'] & {
+                    body[dir="rtl"] & {
                       right: unset;
                       left: 25px;
                       transform: rotateY(180deg);
@@ -588,15 +596,15 @@ header {
                 }
               }
 
-              >.dropdown-menu {
+              > .dropdown-menu {
                 @include mq-max(xl) {
                   display: block !important;
                 }
 
-                >li {
+                > li {
                   padding: 0;
 
-                  >a {
+                  > a {
                     @include mq-max(xl) {
                       margin: 0;
                     }
@@ -604,8 +612,8 @@ header {
                 }
               }
 
-              +.dropdown-mega {
-                >.dropdown-menu {
+              + .dropdown-mega {
+                > .dropdown-menu {
                   padding-block: 0;
                 }
               }
@@ -803,7 +811,7 @@ header {
       }
 
       .show {
-        >.nav-link {
+        > .nav-link {
           color: var(--theme-color);
         }
       }
@@ -915,10 +923,12 @@ header {
     background-color: $white;
     background-clip: padding-box;
     outline: 0;
-    box-shadow: -1px 0 10px 0 rgba($title-color, 0.07), 5px 20px 40px 0 rgba($title-color, 0.04);
+    box-shadow: -1px 0 10px 0 rgba($title-color, 0.07),
+      5px 20px 40px 0 rgba($title-color, 0.04);
     transition: transform 0.3s ease-in-out;
     will-change: transform, box-shadow;
-    transition: transform 0.4s cubic-bezier(0.165, 0.84, 0.44, 1), box-shadow 0.3s ease;
+    transition: transform 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
+      box-shadow 0.3s ease;
     visibility: visible !important;
 
     &:not(.offcanvas-end) {
@@ -952,7 +962,8 @@ header {
     z-index: 1;
 
     @include mq-max(xl) {
-      padding: calc(13px + (20 - 13) * ((100vw - 320px) / (1200 - 320))) calc(16px + (24 - 16) * ((100vw - 320px) / (1200 - 320)));
+      padding: calc(13px + (20 - 13) * ((100vw - 320px) / (1200 - 320)))
+        calc(16px + (24 - 16) * ((100vw - 320px) / (1200 - 320)));
     }
 
     .btn-close {
@@ -994,7 +1005,8 @@ header {
     height: 100%;
 
     @include mq-max(xl) {
-      padding: calc(13px + (20 - 13) * ((100vw - 320px) / (1200 - 320))) calc(16px + (24 - 16) * ((100vw - 320px) / (1200 - 320)));
+      padding: calc(13px + (20 - 13) * ((100vw - 320px) / (1200 - 320)))
+        calc(16px + (24 - 16) * ((100vw - 320px) / (1200 - 320)));
     }
 
     &::-webkit-scrollbar {
@@ -1007,7 +1019,7 @@ header {
       border-radius: 4px;
     }
 
-    >.simplebar-track {
+    > .simplebar-track {
       display: block;
       background-color: transparent;
     }
@@ -1055,7 +1067,8 @@ header {
   .offcanvas {
     &.show {
       transform: none !important;
-      box-shadow: -1px 0 10px 0 rgba($title-color, 0.07), 5px 20px 40px 0 rgba($title-color, 0.04) !important;
+      box-shadow: -1px 0 10px 0 rgba($title-color, 0.07),
+        5px 20px 40px 0 rgba($title-color, 0.04) !important;
     }
   }
 
@@ -1132,7 +1145,7 @@ header {
           border: 0;
 
           &:hover {
-            >.nav-link {
+            > .nav-link {
               &:not(.disabled) {
                 color: var(--theme-color);
 
@@ -1146,7 +1159,7 @@ header {
 
         .nav-item {
           &.active {
-            >.nav-link {
+            > .nav-link {
               &:not(.disabled) {
                 color: var(--theme-color);
               }
@@ -1179,8 +1192,8 @@ header {
           }
         }
 
-        >.dropdown {
-          >.dropdown-toggle {
+        > .dropdown {
+          > .dropdown-toggle {
             &::after {
               display: none;
             }
@@ -1191,7 +1204,8 @@ header {
       .dropdown-menu {
         transition: all 0.4s cubic-bezier(0.65, 0.05, 0.36, 1);
         margin-top: 0;
-        box-shadow: -1px 0 10px 0 rgba($title-color, 0.07), 5px 20px 40px 0 rgba($title-color, 0.04);
+        box-shadow: -1px 0 10px 0 rgba($title-color, 0.07),
+          5px 20px 40px 0 rgba($title-color, 0.04);
         background-color: $white;
         border-color: $white;
         padding: 20px;
@@ -1246,7 +1260,7 @@ header {
             transition: all 0.3s ease-in-out;
             z-index: -1;
 
-            body[dir='rtl'] & {
+            body[dir="rtl"] & {
               left: unset;
               right: 0;
             }
@@ -1272,7 +1286,7 @@ header {
             padding-right: 26px;
 
             &::after {
-              @include pos($pos: absolute, $content: '\ea4e');
+              @include pos($pos: absolute, $content: "\ea4e");
               @include remixicon;
               @include center(vertical);
               @include pseudowh($width: unset, $height: unset);
@@ -1300,7 +1314,7 @@ header {
           border-radius: 5px;
           background-color: $white;
 
-          body[dir='rtl'] & {
+          body[dir="rtl"] & {
             left: unset;
             right: 100%;
           }
@@ -1322,7 +1336,7 @@ header {
 
       .dropdown {
         &:hover {
-          >.dropdown-menu {
+          > .dropdown-menu {
             opacity: 1;
             visibility: visible;
             transform: translateY(0);
@@ -1348,7 +1362,7 @@ header {
       .dropdown-mega {
         position: unset;
 
-        >.dropdown-menu {
+        > .dropdown-menu {
           align-items: flex-start;
           justify-content: space-between;
           flex-wrap: nowrap;
@@ -1356,7 +1370,7 @@ header {
         }
 
         &:hover {
-          >.dropdown-menu {
+          > .dropdown-menu {
             display: flex;
           }
         }
@@ -1379,7 +1393,7 @@ header {
               animation: 0.9s blink infinite;
               margin-left: 4px;
 
-              body[dir='rtl'] & {
+              body[dir="rtl"] & {
                 margin-left: unset;
                 margin-right: 4px;
               }
@@ -1538,7 +1552,11 @@ header {
           }
 
           .nav-link {
-            @include flex_common($dis: flex, $align: center, $justify: space-between);
+            @include flex_common(
+              $dis: flex,
+              $align: center,
+              $justify: space-between
+            );
             color: $content-color;
             font-weight: 700;
 
@@ -1562,13 +1580,13 @@ header {
           }
 
           .show {
-            >.nav-link {
+            > .nav-link {
               color: var(--theme-color);
             }
           }
 
           .active {
-            >.nav-link {
+            > .nav-link {
               color: var(--theme-color);
             }
           }
@@ -1661,7 +1679,7 @@ header {
     border-top-left-radius: 5px;
     border-bottom-right-radius: 5px;
 
-    body[dir='rtl'] & {
+    body[dir="rtl"] & {
       right: unset;
       left: 3px;
       border-top-left-radius: unset;
