--- a/public/assets/scss/app.scss
+++ b/public/assets/scss/app.scss
@@ -1,19 +1,19 @@
 // Bootstrap
-@import "./vendors/bootstrap.scss";
+@import './vendors/bootstrap.scss';
 
 // React Slick
-@import "slick-carousel/slick/slick.css";
-@import "slick-carousel/slick/slick-theme.css";
+@import 'slick-carousel/slick/slick.css';
+@import 'slick-carousel/slick/slick-theme.css';
 
 // React-Toastify
-@import "react-toastify/dist/ReactToastify.css";
+@import 'react-toastify/dist/ReactToastify.css';
 
 // Remix Icon
-@import "remixicon/fonts/remixicon.css";
+@import 'remixicon/fonts/remixicon.css';
 
 @import "utils/variables";
-@import "style.scss";
+@import 'style.scss';
 
 .dark {
-  @import "dark.scss";
+    @import 'dark.scss';
 }
