--- a/public/assets/scss/layout/_footer.scss
+++ b/public/assets/scss/layout/_footer.scss
@@ -2,7 +2,7 @@
      Footer scss
 ==========================**/
 footer {
-  background-color: $light-gray;
+  background-color: #fff;
   position: relative;
   z-index: unset;
 
@@ -53,7 +53,9 @@ footer {
 
         ul {
           &.address {
-            margin-top: calc(17px + (30 - 17) * ((100vw - 320px) / (1920 - 320)));
+            margin-top: calc(
+              17px + (30 - 17) * ((100vw - 320px) / (1920 - 320))
+            );
 
             li {
               display: flex;
@@ -68,7 +70,7 @@ footer {
                 margin: 1px 0 0 10px;
                 color: $content-color;
 
-                body[dir='rtl'] & {
+                body[dir="rtl"] & {
                   margin: 1px 10px 0 0;
                 }
               }
@@ -77,7 +79,9 @@ footer {
 
           li {
             display: block;
-            font-size: calc(14px + (16 - 14) * ((100vw - 320px) / (1920 - 320)));
+            font-size: calc(
+              14px + (16 - 14) * ((100vw - 320px) / (1920 - 320))
+            );
 
             a {
               &:hover {
@@ -85,8 +89,10 @@ footer {
               }
             }
 
-            +li {
-              margin-top: calc(4px + (15 - 4) * ((100vw - 320px) / (1920 - 320)));
+            + li {
+              margin-top: calc(
+                4px + (15 - 4) * ((100vw - 320px) / (1920 - 320))
+              );
             }
           }
         }
@@ -130,7 +136,11 @@ footer {
         }
 
         .address {
-          @include flex_wrap($dis: flex, $wrap: wrap, $gap: calc(8px + (15 - 8) * ((100vw - 320px) / (1920 - 320))));
+          @include flex_wrap(
+            $dis: flex,
+            $wrap: wrap,
+            $gap: calc(8px + (15 - 8) * ((100vw - 320px) / (1920 - 320)))
+          );
           margin-top: calc(7px + (30 - 7) * ((100vw - 320px) / (1920 - 320)));
 
           li {
@@ -159,9 +169,11 @@ footer {
               margin: 0 0 0 10px;
               color: $content-color;
               line-height: 18px;
-              font-size: calc(14px + (16 - 14) * ((100vw - 320px) / (1920 - 320)));
+              font-size: calc(
+                14px + (16 - 14) * ((100vw - 320px) / (1920 - 320))
+              );
 
-              body[dir='rtl'] & {
+              body[dir="rtl"] & {
                 margin-right: 10px;
                 margin-left: unset;
               }
@@ -195,7 +207,7 @@ footer {
             transform: translateY(-50%) rotate(180deg);
           }
 
-          ~.footer-contain {
+          ~ .footer-contain {
             display: block;
           }
         }
@@ -254,7 +266,7 @@ footer {
               color: $content-color;
               line-height: 18px;
 
-              body[dir='rtl'] & {
+              body[dir="rtl"] & {
                 margin: 0 10px 0 0;
               }
             }
@@ -277,7 +289,7 @@ footer {
               background-color: var(--theme-color);
               transition: all 0.3s ease-in-out;
 
-              body[dir='rtl'] & {
+              body[dir="rtl"] & {
                 left: unset;
                 right: 0;
               }
@@ -293,7 +305,7 @@ footer {
               opacity: 0;
               transition: all 0.3s ease-in-out;
 
-              body[dir='rtl'] & {
+              body[dir="rtl"] & {
                 left: unset;
                 right: -13px;
               }
@@ -303,7 +315,7 @@ footer {
               color: var(--theme-color);
               margin-left: 13px;
 
-              body[dir='rtl'] & {
+              body[dir="rtl"] & {
                 margin-left: unset;
                 margin-right: 13px;
               }
@@ -321,7 +333,7 @@ footer {
               padding-left: 13px;
               margin-left: 5px;
 
-              body[dir='rtl'] & {
+              body[dir="rtl"] & {
                 margin-left: unset;
                 margin-right: 5px;
                 padding-left: unset;
@@ -342,7 +354,7 @@ footer {
                   background-color: rgba(221, 221, 221, 0.761);
                 }
 
-                body[dir='rtl'] & {
+                body[dir="rtl"] & {
                   left: unset;
                   right: 0;
                 }
@@ -356,7 +368,7 @@ footer {
                 color: $content-color;
                 margin-left: 5px;
 
-                body[dir='rtl'] & {
+                body[dir="rtl"] & {
                   margin-left: unset;
                   margin-right: 5px;
                 }
@@ -364,7 +376,7 @@ footer {
             }
           }
 
-          +li {
+          + li {
             margin-top: calc(4px + (15 - 4) * ((100vw - 320px) / (1920 - 320)));
           }
         }
@@ -391,7 +403,9 @@ footer {
             display: block;
 
             img {
-              width: calc(114px + (140 - 114) * ((100vw - 320px) / (1920 - 320)));
+              width: calc(
+                114px + (140 - 114) * ((100vw - 320px) / (1920 - 320))
+              );
             }
           }
         }
@@ -404,7 +418,9 @@ footer {
       ul {
         li {
           display: block;
-          margin-bottom: calc(30px + (50 - 30) * ((100vw - 320px) / (1920 - 320)));
+          margin-bottom: calc(
+            30px + (50 - 30) * ((100vw - 320px) / (1920 - 320))
+          );
           position: relative;
 
           &:last-child {
@@ -422,7 +438,9 @@ footer {
                   display: block;
 
                   img {
-                    width: calc(114px + (140 - 114) * ((100vw - 320px) / (1920 - 320)));
+                    width: calc(
+                      114px + (140 - 114) * ((100vw - 320px) / (1920 - 320))
+                    );
                     height: auto;
                   }
                 }
@@ -437,7 +455,7 @@ footer {
             width: calc(100% - 33px);
             border-bottom: 1px dashed #c1c1c1;
 
-            body[dir='rtl'] & {
+            body[dir="rtl"] & {
               right: unset;
               left: 0;
             }
@@ -517,7 +535,7 @@ footer {
       h6 {
         margin-right: 10px;
 
-        body[dir='rtl'] & {
+        body[dir="rtl"] & {
           margin-left: 10px;
           margin-right: unset;
         }
@@ -534,10 +552,10 @@ footer {
             }
           }
 
-          +li {
+          + li {
             margin-left: 8px;
 
-            body[dir='rtl'] & {
+            body[dir="rtl"] & {
               margin-left: unset;
               margin-right: 8px;
             }
@@ -548,7 +566,9 @@ footer {
             color: $content-color;
 
             svg {
-              font-size: calc(15px + (17 - 15) * ((100vw - 320px) / (1920 - 320)));
+              font-size: calc(
+                15px + (17 - 15) * ((100vw - 320px) / (1920 - 320))
+              );
               color: $content-color;
               transition: all 0.3s ease-in-out;
             }
@@ -602,7 +622,6 @@ footer {
         .footer-logo-contain {
           .address {
             li {
-
               a,
               i,
               svg {
@@ -771,7 +790,9 @@ footer {
       }
 
       .footer-title {
-        margin-bottom: calc(13px + (36 - 13) * ((100vw - 320px) / (1920 - 320)));
+        margin-bottom: calc(
+          13px + (36 - 13) * ((100vw - 320px) / (1920 - 320))
+        );
         font-size: calc(18px + (22 - 18) * ((100vw - 320px) / (1920 - 320)));
         font-family: $public-sans;
         font-weight: 600;
@@ -781,7 +802,9 @@ footer {
           margin-bottom: 0;
 
           &.show {
-            margin-bottom: calc(13px + (36 - 13) * ((100vw - 320px) / (1920 - 320)));
+            margin-bottom: calc(
+              13px + (36 - 13) * ((100vw - 320px) / (1920 - 320))
+            );
           }
         }
 
@@ -815,7 +838,11 @@ footer {
       }
 
       .footer-list {
-        @include flex_wrap($dis: flex, $wrap: wrap, $gap: calc(7px + (16 - 7) * ((100vw - 320px) / (1920 - 320))));
+        @include flex_wrap(
+          $dis: flex,
+          $wrap: wrap,
+          $gap: calc(7px + (16 - 7) * ((100vw - 320px) / (1920 - 320)))
+        );
 
         li {
           display: block;
@@ -924,7 +951,9 @@ footer {
 
               p {
                 margin: -3px 0 0;
-                width: calc(100% + (64 - 100) * ((100vw - 320px) / (1920 - 320)));
+                width: calc(
+                  100% + (64 - 100) * ((100vw - 320px) / (1920 - 320))
+                );
                 font-size: 16px;
                 line-height: 30px;
               }
